<resources>
    <string name="app_name">GoogleOneTap</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="home_fragment_label">Home</string>

    <string name="email_auth">Login</string>
    <string name="google_auth">Login with Google</string>
    <string name="biometric_auth">Login with biometrric</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="login">Login </string>

    <string name="google_one_tap_server">942618241031-rssqed7s9ksho76drcfhdsmv0fdlgenc.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>

    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="btn_authorize">Authorize</string>

    <string name="secret_key_name">"biometric_sample_encryption_key"</string>

</resources>